--- a/alire.toml
+++ b/alire.toml
@@ -1,1 +1,38 @@
+name = "hcsr04_stm32"
+description = "STM32 library for HC-SR04 ultrasonic distance sensor."
+version = "0.1.0"
+license = "BSD-3-Clause"
+
+tags = ["embedded", "arm", "stm32", "hcsr04"]
+website = "https://github.com/bullyDD"
+
 author = "Joseph BINYOUM BAYEMI"
+maintainers = ["bullyDD <clubdeveloppeursenegal@gmail.com>"]
+maintainers-logins = ["bullyDD"]
+
+executables = ["hcsr04_stm32"]
+
+[configuration]
+auto_gpr_with = true
+disabled = false
+generate_ada = true
+generate_c = true
+generate_gpr = true
+output_dir = "config"
+[configuration.values.arm_cortex]
+core = "m4f"
+[configuration.values.stm32_config]
+board = "stm32f429disco"
+mcu = "stm32f429x"
+runtime = "embedded"
+
+[[depends-on]]
+arm_cortex = "1.0.0"
+beta_types = "1.0.0"
+gnat_arm_elf = "^12"
+hal_embedded = "1.0.0"
+stm32_boards = "1.0.0"
+stm32_components = "1.0.0"
+stm32_drivers = "1.0.0"
+stm32_graphics = "1.0.0"
+stm32_svd = "1.0.0"
